<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="MAIN" Id="{1504ce68-47a1-4b47-8617-25bedc0a150a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	fbTestIntlk:FB_Interlock;	
	fbTestPerm:FB_Permissive;
	fbTestRunCtrl:FB_SystemRunControl;
	fbTestDigitalInput:fbIO_DigitalInput;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbTestIntlk(
	bInterlock1:= , 
	bInterlock2:= , 
	bInterlock3:= , 
	bInterlock4:= , 
	bInterlock5:= , 
	bInterlock6:= , 
	bInterlock7:= , 
	bInterlock8:= , 
	bInterlock9:= , 
	bInterlock10:= , 
	bInterlock11:= , 
	bInterlock12:= , 
	bInterlock13:= , 
	bInterlock14:= , 
	bInterlock15:= , 
	bInterlock16:= , 
	bOutInterlockOk=> , 
	HMI_Interlock:=HMI.stTest01_Intlk );

fbTestPerm(
	bPermissive1:= , 
	bPermissive2:= , 
	bPermissive3:= , 
	bPermissive4:= , 
	bPermissive5:= , 
	bPermissive6:= , 
	bPermissive7:= , 
	bPermissive8:= , 
	bPermissive9:= , 
	bPermissive10:= , 
	bPermissive11:= , 
	bPermissive12:= , 
	bPermissive13:= , 
	bPermissive14:= , 
	bPermissive15:= , 
	bPermissive16:= , 
	bOutPermissiveOk=>, 
	HMI_Permissive:= HMI.stTest02_Perm);

HMI.stTest01_Intlk.asInterlockNames[1]:='Valve in correct position';
	
fbTestRunCtrl(
	bInEnableStart:= , 
	bInEnableStop:= , 
	bInStartAuto:= , 
	bInStopAuto:= , 
	bOutRunCmd=> , 
	HMI_SystemRunControl:= HMI.stTest03_RunCtrl);
	
fbTestDigitalInput(
	iInMode:= , 
	bInInput:= , 
	tInOnDebounce:= , 
	tInOffDebounce:= , 
	bOutAuto=> , 
	bOutOn=> , 
	bOutRisingEdge=> , 
	bOutFallingEdge=> , 
	HMI_DigitalInput:=HMI.stTest04_DigitalInput );]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="13" Count="17" />
      <LineId Id="8" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="17" />
      <LineId Id="32" Count="0" />
      <LineId Id="66" Count="1" />
      <LineId Id="52" Count="0" />
      <LineId Id="54" Count="5" />
      <LineId Id="53" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="71" Count="8" />
      <LineId Id="69" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>